fix overflow

--- a/board/board.css
+++ b/board/board.css
@@ -1,6 +1,7 @@
 #board {
 	width: 100vw;
 	height: 100vh;
+	overflow: hidden;
 }
 
 #tile13 {
